--- a/pages/index.css
+++ b/pages/index.css
@@ -8,12 +8,24 @@
 @import url(../blocks/header/__lingue/header__lingue.css);
 @import url(../blocks/header/__lang-item/header__lang-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+
+
 @import url(../blocks/content/content.css);
 
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/content/__lead/content__lead.css);
 
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/content/__intro/);
 
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/content/__photo-grid/content__photo-grid.css);
 
+@import url(../blocks/places/places.css);
+@import url(../blocks/content/__places/content__places.css);
 
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/content/__cover/content__cover.css);
 
 
 @import url(../blocks/footer/footer.css);
