--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/content/__photo-grid/content__photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 @import url(../blocks/places/places.css);
 @import url(../blocks/content/__places/content__places.css);
