--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,7 +1,8 @@
-.photo-grid__item {
+.places__image {
   display: block;
   width: 100%;
   max-height: 100%;
   min-height: 100%;
   object-fit: contain;
+  object-position: top;
 }
