--- a/pages/index.css
+++ b/pages/index.css
@@ -8,15 +8,25 @@
 @import url(../blocks/header/__lingue/header__lingue.css);
 @import url(../blocks/header/__lang-item/header__lang-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-
+@import url(../blocks/link-hover/link-hover.css);
 
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/content/__lead/content__lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__main-picture/lead__main-picture.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
 
 @import url(../blocks/intro/intro.css);
-@import url(../blocks/content/__intro/);
+@import url(../blocks/content/__intro/content__intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
+@import url(../blocks/intro/__span-accent/intro__span-accent.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/content/__photo-grid/content__photo-grid.css);
@@ -24,10 +34,21 @@
 
 @import url(../blocks/places/places.css);
 @import url(../blocks/content/__places/content__places.css);
+@import url(../blocks/places/__items/places__items.css);
+@import url(../blocks/places/__item/places__item.css);
+@import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__link-item/places__link-item.css);
+@import url(../blocks/places/__caption/places__caption.css);
+@import url(../blocks/places/__link/places__link.css);
+@import url(../blocks/places/__image/places__image.css);
+@import url(../blocks/places/__text-block/places__text-block.css);
+@import url(../blocks/places/__paragraph/places__paragraph.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/content/__cover/content__cover.css);
-
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/page/__footer/page__footer.css);
