--- a/blocks/content/__intro/content__intro.css
+++ b/blocks/content/__intro/content__intro.css
@@ -3,3 +3,22 @@
   padding: 92px 148px 0;
   width: 100%;
 }
+
+@media screen and (max-width: 1279px) {
+  .content__intro {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .content__intro {
+    padding: 88px 24px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .content__intro {
+    padding: 64px 16px 0;
+  }
+}
