--- a/blocks/content/__lead/content__lead.css
+++ b/blocks/content/__lead/content__lead.css
@@ -1,5 +1,17 @@
 .content__lead {
   box-sizing: inherit;
   width: 100%;
-  padding: 56px 147px 0;
+  padding: 0 148px;
+}
+
+@media screen and (max-width: 1279px) {
+  .content__lead {
+    padding: 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .content__lead {
+    padding: 0;
+  }
 }
