--- a/blocks/content/__photo-grid/content__photo-grid.css
+++ b/blocks/content/__photo-grid/content__photo-grid.css
@@ -3,3 +3,15 @@
   width: 100%;
   padding: 92px 48px;
 }
+
+@media screen and (max-width: 1023px) {
+  .content__photo-grid {
+    padding: 88px 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .content__photo-grid {
+    padding: 64px 16px;
+  }
+}
