--- a/blocks/content/__places/content__places.css
+++ b/blocks/content/__places/content__places.css
@@ -3,3 +3,24 @@
   width: 100%;
   padding: 0 148px 92px;
 }
+
+@media screen and (max-width: 1279px) {
+  .content__places {
+    width: 100%;
+    padding: 0 48px 92px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .content__places {
+    width: 100%;
+    padding: 0 24px 90px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .content__places {
+    width: 100%;
+    padding: 0 0 66px;
+  }
+}
