--- a/blocks/footer/__column/footer__column.css
+++ b/blocks/footer/__column/footer__column.css
@@ -1,5 +1,12 @@
 .footer__column {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
-  line-height: 16px;
+  line-height: 18px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__column {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
