--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -5,3 +5,13 @@
 .footer__link-item:last-of-type {
   margin-right: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__link-item {
+    padding-bottom: 32px;
+  }
+
+  .footer__link-item:last-of-type {
+    padding-bottom: 0;
+  }
+}
