--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,3 +5,10 @@
   list-style-type: none;
   color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    padding-bottom: 48px;
+  }
+}
