--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+  }
+}
