--- a/blocks/header/__lang-item/header__lang-item.css
+++ b/blocks/header/__lang-item/header__lang-item.css
@@ -1,6 +1,5 @@
 .header__lang-item {
   margin-right: 18px;
-  text-align: center;
   font-size: 24px;
   line-height: 28px;
 }
@@ -11,4 +10,11 @@
 
 .header__lang-item:first-of-type {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 767px) {
+  .header__lang-item {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
