--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,15 @@
 .intro__list {
   margin: 0;
-  padding: 22px 0 0;
+  padding: 33px 0 0;
   list-style-type: none;
   font-weight: normal;
   font-size: 12px;
   line-height: 18px;
+  min-width: 320px;
+}
+
+@media screen and (max-width: 767px) {
+  .intro__list {
+    padding-top: 34px;
+  }
 }
