--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,5 +4,17 @@
   margin: 0;
   font-weight: normal;
   font-size: 16px;
-  line-height: 29px;
+  line-height: 26px;
+}
+
+@media screen and (min-width: 1281px) {
+  .intro__text {
+    width: 74.35%;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__text {
+    width: 100%;
+  }
 }
