--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,5 +6,19 @@
   font-weight: normal;
   font-size: 30px;
   line-height: 36px;
-  color: #fff;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    padding-bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    width: 288px;
+    padding: 16px 16px 40px;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
