--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,5 +5,13 @@
   font-size: 96px;
   font-weight: 900;
   line-height: 100px;
-  color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    text-align: center;
+    width: 288px;
+    font-size: 40px;
+    line-height: 44px;
+  }
 }
