--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,4 +1,23 @@
 .page__header {
-  padding: 28px 48px 0;
+  padding: 28px 48px 56px;
   box-sizing: inherit;
+}
+
+@media screen and (max-width: 1279px) {
+  .page__header {
+    padding-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page__header {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page__header {
+    padding: 16px 16px 48px;
+  }
 }
