--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,7 +1,6 @@
 .places__image {
   display: block;
-  width: 100%;
-  max-height: 100%;
+  max-width: 100%;
   min-height: 100%;
   object-fit: contain;
   object-position: top;
