--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,11 +1,38 @@
 .places__item {
+  width: 100%;
+  grid-template-columns: minmax(460px, 1fr) minmax(484px, 1fr);
+  /* grid-template-columns: 460px minmax(484px, 1fr); */
   display: grid;
   padding-bottom: 80px;
-  grid-template-columns: repeat(2, minmax(min-content, 460px));
   gap: 48px 40px;
   color: #fff;
 }
 
 .places__item:last-of-type {
   padding-bottom: 0;
+}
+
+@media screen and (max-width: 1279px) {
+  .places__item {
+    /* grid-template-columns: minmax(440px, 1fr) minmax(456px, 1fr); */
+    grid-template-columns: 440px minmax(456px, 1fr);
+    gap: 48px 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places__item {
+    /* grid-template-columns: minmax(340px, 1fr) minmax(352px, 1fr); */
+    grid-template-columns: 340px minmax(352px, 1fr);
+    gap: 48px 28px;
+    padding-bottom: 73px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__item {
+    grid-template-columns: minmax(320px, 1fr);
+    gap: 32px;
+    padding-bottom: 64px;
+  }
 }
