--- a/blocks/places/__items/places__items.css
+++ b/blocks/places/__items/places__items.css
@@ -2,4 +2,23 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
+  min-width: 984px;
+}
+
+@media screen and (max-width: 1279px) {
+  .places__items {
+    min-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places__items {
+    min-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__items {
+    min-width: 320px;
+  }
 }
