--- a/blocks/places/__link-item/places__link-item.css
+++ b/blocks/places/__link-item/places__link-item.css
@@ -1,6 +1,10 @@
 .places__link-item {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  align-self: end;
+}
+
+@media screen and (max-width: 767px) {
+  .places__link-item {
+    padding: 0 16px;
+  }
 }
