--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -9,3 +9,11 @@
 .places__paragraph:last-of-type {
   padding-bottom: 0;
 }
+
+@media screen and (max-width: 1023px) {
+  .places__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+    padding-bottom: 25px;
+  }
+}
