--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -4,3 +4,18 @@
   font-size: 72px;
   line-height: 76px;
 }
+
+@media screen and (max-width: 1023px) {
+  .places__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__title {
+    font-size: 32px;
+    line-height: 35px;
+    padding: 0 16px;
+  }
+}
