--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -20,10 +20,10 @@
   opacity: .3;
   transition: opacity .3s ease-in-out;
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
   z-index: 1;
 }
 
