--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,11 @@
 .page {
-  max-width: 1920px;
+  max-width: 100%;
   box-sizing: border-box;
   font-family: 'Inter', 'Arial', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%; 
+  text-rendering: optimizeLegibility;
 }
