--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lingue/header__lingue.css);
 @import url(../blocks/header/__lang-item/header__lang-item.css);
+@import url(../blocks/header/__lang-item/_enabled/header__lang-item_enabled.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/link-hover/link-hover.css);
 
