--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,7 @@
   box-sizing: inherit;
   display: flex;
   justify-content: space-between;
+  color: #fff;
 }
 
 @media screen and (max-width: 767px) {
