--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,22 @@
 .places {
   color: #fff;
+  min-width: 984px;
+}
+
+@media screen and (max-width: 1279px) {
+  .places {
+    min-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places {
+    min-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+    min-width: 320px;
+  }
 }
