--- a/blocks/video/__duration/video__duration.css
+++ b/blocks/video/__duration/video__duration.css
@@ -6,3 +6,18 @@
   letter-spacing: 0.3em;
   padding-bottom: 12px;
 }
+
+@media screen and (max-width: 1023px) {
+  .video__duration {
+    padding-bottom: 8px;
+    font-size: 12px;
+    line-height: 13px;
+    letter-spacing: 0.3em;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .video__duration {
+    padding-bottom: 8px;
+  }
+} 
