--- a/blocks/video/__elements/video__elements.css
+++ b/blocks/video/__elements/video__elements.css
@@ -9,3 +9,15 @@
   padding: 30px;
   justify-content: space-between;
   }
+
+  @media screen and (max-width: 1023px) {
+    .video__elements {
+      padding: 25px;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .video__elements {
+      padding: 16px;
+    }
+  } 
