--- a/blocks/video/__subtitle/video__subtitle.css
+++ b/blocks/video/__subtitle/video__subtitle.css
@@ -2,7 +2,7 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 35px;
-  margin: 0;
+  margin: 0 auto;
   max-width: 640px;
   text-align: center;
   padding-bottom: 68px;
@@ -20,5 +20,6 @@
     padding-bottom: 24px;
     font-size: 16px;
     line-height: 23px;
+    max-width: 343px;
   }
 }
